@@ -250,6 +250,16 @@ only.  This module I<will> still throw an exception, if the L<Alien>
 doesn't look like a module name or if it does not provide a C<dynamic_libs>
 method (which is implemented by all L<Alien::Base> subclasses).
 
+[version 0.30]
+[breaking change]
+
+Starting with version 0.30, libraries provided by L<Alien>s is preferred
+over the system libraries.  The original thinking was that you want to
+prefer the system libraries because they are more likely to get patched
+with regular system updates.  Unfortunately, the reason a module needs to
+install an Alien is likely because the system library is not new enough,
+so we now prefer the L<Alien>s instead.
+
 =back
 
 =cut
@@ -302,7 +312,7 @@ sub find_lib
 
   delete $missing{'*'};
 
-  alien: foreach my $alien (@{ $args{alien} })
+  alien: foreach my $alien (reverse @{ $args{alien} })
   {
     unless($alien =~ /^([A-Za-z_][A-Za-z_0-9]*)(::[A-Za-z_][A-Za-z_0-9]*)*$/)
     {
@@ -322,7 +332,7 @@ sub find_lib
         croak "Alien $alien doesn't provide a dynamic_libs method";
       }
     }
-    push @path, [$alien->dynamic_libs];
+    unshift @path, [$alien->dynamic_libs];
   }
 
   foreach my $path (@path)
